Fix blurry hover text

--- a/interface/scss/layout/_main_layout.scss
+++ b/interface/scss/layout/_main_layout.scss
@@ -20,7 +20,7 @@
 
         .pane-icon {
             display: block;
-            padding: 17px;
+            padding: 16px;
             width: $panel-pane-1-w;
             height: $panel-pane-1-w;
             color: rgba(0, 0, 0, 0.5);
